<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".presentation.fragments.SettingsFragment">

    <TextView
        android:id="@+id/textView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="8dp"
        android:text="@string/settings_theme_text"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <RadioGroup
        android:id="@+id/theme_radio_group"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/textView">

        <RadioButton
            android:id="@+id/system_theme_radio_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/system_theme_text" />

        <RadioButton
            android:id="@+id/light_theme_radio_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/light_theme_text" />

        <RadioButton
            android:id="@+id/dark_theme_radio_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/dark_theme_text" />

    </RadioGroup>

</androidx.constraintlayout.widget.ConstraintLayout>